--- a/elegido.html
+++ b/elegido.html
@@ -16,7 +16,7 @@
         <table class="imagenes">
 
             <tr id="imagen">
-                <td><a href="IMG/conjunto 1.jpg"><img src="IMG/conjunto 1.jpg" width="400" height="500"></a></td>
+                <td><img src="IMG/conjunto 1.jpg" width="400" height="500"></td>
             </tr>
 
          </table>
