--- a/conjuntosdeportivos.html
+++ b/conjuntosdeportivos.html
@@ -24,7 +24,7 @@
         <table class="imagenes">
 
             <tr id="imagen">
-                <td><a href="IMG/conjunto 1.jpg"><img src="IMG/conjunto 1.jpg" width="400" height="500"></a></td>
+                <td><a href="elegido.html"><img src="IMG/conjunto 1.jpg" width="400" height="500"></a></td>
                 <td><img src="IMG/conjunto 1.jpg" width="400" height="500"></td>
                 <td><img src="IMG/conjunto 1.jpg" width="400" height="500"></td>
                 <td><img src="IMG/conjunto 1.jpg" width="400" height="500"></td>
